--- a/Blog/pacotes_estatistica.qmd
+++ b/Blog/pacotes_estatistica.qmd
@@ -9,6 +9,10 @@ author:
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/VitorRibasP
     orcid: 0009-0009-6923-7712
+  - name: Arthur Dionizio Martins da Silva
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/Arthur-Dionizio
+    orcid: 0009-0002-4313-9187
 date: "2025-05-29"
 image: imagens/pacotes_estatistica.png
 lang: pt
@@ -22,9 +26,11 @@ draft: false
 
 ## Introdução
 
-Ao falar de Estatística, a primeira linguagem de programação que costuma vir à mente é o R, desenvolvido justamente para isso, com uma vasta gama de ferramentas estatísticas já disponíveis por padrão, além de milhares de pacotes criados para as mais diversas finalidades. Para nossa sorte, embora o Julia não tenha sido pensado exclusivamente para Estatística, já conta com grande parte das ferramentas essenciais, graças a um ecossistema de pacotes que cresce rapidamente e atende a várias áreas.
+Ao falar de Estatística, a primeira linguagem de programação que costuma vir à mente é R. Criada especificamente para análise estatística e ciência de dados, oferece uma ampla gama de ferramentas estatísticas já disponíveis por padrão, além de milhares de pacotes criados para os mais diversos propósitos.
 
-Vamos, então, conhecer os principais pacotes para fazer Estatística em Julia separados por área de aplicação, desde tarefas básicas até análises inferenciais sofisticadas.
+Para nossa sorte, embora a linguagem Julia não tenha sido projetada exclusivamente para a Estatística, já conta com grande parte das ferramentas essenciais, graças a um ecossistema de pacotes que cresce rapidamente e abrange diversas áreas da análise de dados, da modelagem estatística e do aprendizado de máquina.
+
+Vamos, então, conhecer os principais pacotes para trabalhar com Estatística em Julia, organizados por área de aplicação — desde tarefas básicas até análises inferenciais sofisticadas.
 
 ## Manipulação de Dados e Estatísticas Sumárias
 
@@ -35,20 +41,20 @@ Vamos, então, conhecer os principais pacotes para fazer Estatística em Julia s
 ## Variáveis Aleatórias
 
  - [Distributions](https://github.com/JuliaStats/Distributions.jl): Definição, manipulação e amostragem de distribuições de probabilidade;
- - [Random](https://docs.julialang.org/en/v1/stdlib/Random/): Geração de números aleatórios e utilização de sementes, a fim de replicabilidade.
+ - [Random](https://docs.julialang.org/en/v1/stdlib/Random/): Geração de números aleatórios com uso de sementes, garantindo a reprodutibilidade.
 
 ## Visualização de Dados
 
- - [Plots](https://github.com/JuliaPlots/Plots.jl): Construção de uma grande variedade de gráficos;
- - [Gadfly](https://github.com/GiovineItalia/Gadfly.jl): Criação de gráficos com sintaxe semelhante ao ggplot, do R.
+ - [Plots](https://github.com/JuliaPlots/Plots.jl): Construção de uma ampla variedade de gráficos;
+ - [Gadfly](https://github.com/GiovineItalia/Gadfly.jl): Criação de gráficos com sintaxe semelhante à do pacote ggplot2, do R.
 
 ## Modelagem e Testes de Hipótese
 
- - [HypotesisTests](https://github.com/JuliaStats/HypothesisTests.jl): Realização de clássicos testes de hipótese paramétricos e não paramétricos;
+ - [HypotesisTests](https://github.com/JuliaStats/HypothesisTests.jl): Realização de testes de hipótese frequentistas, incluindo testes paramétricos e não paramétricos;
  - [GLM](https://github.com/JuliaStats/GLM.jl): Modelagens de regressões lineares e regressões lineares generalizadas;
  - [MixedModels](https://github.com/JuliaStats/MixedModels.jl): Ajuste de modelos lineares e generalizados com efeitos mistos;
  - [Optim](https://github.com/JuliaNLSolvers/Optim.jl): Otimização de funções, essencial para maximizar verossimilhanças;
- - [MultivariateStats](https://github.com/JuliaStats/MultivariateStats.jl): Principais ferramentas de análise multivariada, como PCA e LDA;
+ - [MultivariateStats](https://github.com/JuliaStats/MultivariateStats.jl): Ferramentas de análise multivariada, como PCA e LDA;
  - [TimeSeries](https://github.com/JuliaStats/TimeSeries.jl): Manipulação, visualização e modelagem de séries temporais.
 
 ## Inferência Bayesiana
@@ -59,16 +65,16 @@ Vamos, então, conhecer os principais pacotes para fazer Estatística em Julia s
 ## Aprendizado de Máquina
 
  - [DecisionTree](https://github.com/JuliaAI/DecisionTree.jl): Algoritmos de árvores de decisão, árvores de regressão e florestas aleatórias;
- - [Clustering](https://github.com/JuliaStats/Clustering.jl): Algoritmos de clusterização, para aprendizado de máquina não supervisionado;
- - [ScikitLearn](https://github.com/cstjean/ScikitLearn.jl): Diversos algoritmos de Machine Learning com sintaxe semelhante ao Python;
- - [MLBase](https://github.com/JuliaStats/MLBase.jl): Ferramentas para auxiliar a aplicação de modelos de Machine Learning.
+ - [Clustering](https://github.com/JuliaStats/Clustering.jl): Algoritmos de clusterização, voltados para aprendizado de máquina não supervisionado;
+ - [ScikitLearn](https://github.com/cstjean/ScikitLearn.jl): Diversos algoritmos de machine learning com sintaxe semelhante à da biblioteca do Python, de mesmo nome;
+ - [MLBase](https://github.com/JuliaStats/MLBase.jl): Ferramentas auxiliares para aplicação de modelos de machine learning.
 
 
 ## Conclusão
 
-Com esse conjunto de pacotes, o Julia se consolida como uma linguagem extremamente capaz para análise estatística. Embora seu uso ainda esteja em crescimento, já é possível realizar praticamente qualquer tarefa estatística, desde análises descritivas simples até modelagens complexas, sejam frequentistas, bayesianas ou de aprendizado de máquina.
+Com esse conjunto de pacotes, a Julia se consolida como uma linguagem extremamente capaz para as áreas supracitadas, que incluem análise estatística, modelagem e aprendizado de máquina. Embora seu uso ainda esteja em crescimento, já é possível realizar praticamente qualquer tarefa estatística — desde análises descritivas simples até modelagens complexas, sejam frequentistas, bayesianas ou baseadas em aprendizado de máquina.
 
-Além dos pacotes citados, existem muitos outros e, para explorar mais, acesse o site [Julia Packages](https://juliapackages.com/) e descubra todo o potencial que a linguagem oferece.
+Além dos pacotes mencionados, existem muitos outros. Para explorar mais, acesse o site [Julia Packages](https://juliapackages.com/) e descubra todo o potencial que a linguagem oferece.
 
 ::: callout-note
 Ferramentas de IA foram utilizadas para correção ortográfica e aprimoramento do texto.
