--- a/Blog/vscode.qmd
+++ b/Blog/vscode.qmd
@@ -8,8 +8,11 @@ categories:
 author:
   - name: Guilherme Duarte
     affiliation: "Universidade Estadual de Campinas"
-    
-date: "2025-05-16"
+  - name: Pedro H. G. Elias
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/phgelias
+    orcid: 0009-0003-8992-9827
+date: "2025-06-25"
 image: imagens/logo_vscode.png
 lang: pt
 format:
@@ -22,40 +25,40 @@ draft: true
 
 ## Introdução
 
-A linguagem Julia tem ganhado cada vez mais espaço entre cientistas de dados, estatísticos, engenheiros e matemáticos graças à sua velocidade e sintaxe simples. Uma das formas mais práticas de programar em Julia é através do Visual Studio Code (VS Code), um editor leve, moderno e altamente extensível.
+A linguagem Julia tem ganhado cada vez mais espaço entre cientistas de dados, estatísticos, engenheiros e matemáticos, graças à sua velocidade e sintaxe simples. Uma das formas mais práticas de programar em Julia é por meio do Visual Studio Code (VS Code), um editor leve, moderno e altamente extensível.
 
 Neste post, vamos mostrar como configurar e usar o Julia no VS Code — ideal para quem está começando do zero.
 
-## Pré Requisitos
+## Pré-requisitos
 
--   Ter o [Julia](https://www.ime.unicamp.br/~juliacps/Blog/instalar_julia.html) instalado ;
+-   Ter o [Julia](https://www.ime.unicamp.br/~juliacps/Blog/instalar_julia.html) instalado;
 
 -   Ter o [VS Code](https://code.visualstudio.com/download) instalado.
 
 ## Instalando o VS Code
 
-Se ainda não instalou o VSCode, clicando no link no tópico anterior você será direcionado à página de download do VS Code. Ao chegar lá, baixe o arquivo de acordo com o seu sistema operacional .
+Se ainda não instalou o VS Code, clique no link no tópico anterior para ser direcionado à página de download. Ao chegar lá, baixe o arquivo de acordo com o seu sistema operacional.
 
 Após baixar o arquivo, deixe marcado as seguintes opções durante a instalação:
 
 ![Instalação do VS Code](imagens/vscode_installer.png)
 
-## Instalando a esxtensão do Julia no VS Code
+## Instalando a extensão do Julia no VS Code
 
-Com o VS Code devidamente instalado, devemos instalar a extensão oficial do Julia. Ao entrar no VS Code,
+Com o VS Code devidamente instalado, devemos instalar a extensão oficial do Julia. Para isso:
 
--   Abra a aba de extensões (Ctrl + shift + X)
+-   Abra a aba de extensões (Ctrl + shift + X);
 
--   Busque por 'Julia'
+-   Busque por "Julia";
 
--   Selecione a extensão e clique em 'Install'
+-   Selecione a extensão e clique em "Install".
 
 ![Extensão do Julia](imagens/extensao_julia.png)
 
 ## Programando em Julia
 
-Com a extensão do Julia instalada, chegou a hora de por a mão na massa. Para fazer seu primeiro código em Julia no VS Code, você deve criar um novo arquivo do tipo **.jl**. Para rodar determinadas linhas de código, selecione as linhas e use o atalho **Ctrl + Enter**. Se preferir, pode clicar no botão "Run", no canto superior direito, para rodar o arquivo inteiro.
+Com a extensão do Julia instalada, chegou a hora de pôr a mão na massa. Para escrever seu primeiro código em Julia no VS Code, crie um novo arquivo do tipo **.jl**. Para executar determinadas linhas de código, selecione-as e use o atalho **Ctrl + Enter**. Se preferir, clique no botão "Run", no canto superior direito, para rodar o arquivo inteiro.
 
 ![Olá Mundo!](imagens/helloworld.png)
 
-Pronto, agora você já pode começar a programar e realizar seus projetos em Julia pelo VS Code!
+Pronto! Agora você já pode começar a programar e desenvolver seus projetos em Julia com o VS Code!
