--- a/Tutoriais/BSQLJulia.qmd
+++ b/Tutoriais/BSQLJulia.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Um pouco de SQLite em Julia"
 description: |
-  Como trabalhar com o SQLite no Julia
+  "Como trabalhar com o SQLite no Julia"
 categories:
   - Tutorial
 author:
